--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -163,13 +163,8 @@
                     <div class="team-member">
                         <img src="http://res.cloudinary.com/djqpokvos/image/upload/v1452602539/Untitled_bzg1rw.jpg" class="img-responsive img-circle" alt="">
                         <h4>Somesh Chaturvedi</h4>
-                        <p class="text-muted">2nd Yr Biotechnlogy Department</p>
+                        <p class="text-muted">2nd Yr Biotechnology Department</p>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
                 </div>
             </div>
         </div>
